--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,9 @@
   --card-background-color: white;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Lekton", monospace;
+}
